<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context="com.acj.mobile.android.verifyfacial.enrollment.capture.FaceRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/instruccion_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/acj_negro"
            android:text="@string/instruccion_titulo"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:weightSum="5"
        tools:ignore="UselessLeaf">

        <ImageView
            android:id="@+id/instruccion_img_iluminacion"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="70dp"
            android:layout_weight="4"
            app:srcCompat="@drawable/idea"
            android:tint="@color/White"
            android:contentDescription="@string/instruccion_img_iluminacion" />

        <TextView
            android:id="@+id/instruccion_iluminacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="14dp"
            android:paddingStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:paddingBottom="14dp"
            android:gravity="center_vertical"
            android:text="@string/instruccion_iluminacion"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:weightSum="5"
        tools:ignore="UselessLeaf">

        <ImageView
            android:id="@+id/instruccion_img_lentes"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="70dp"
            android:layout_weight="4"
            android:tint="@color/White"
            app:srcCompat="@drawable/lentes"
            android:contentDescription="@string/instruccion_img_lentes" />

        <TextView
            android:id="@+id/instruccion_lentes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="14dp"
            android:paddingStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:paddingBottom="14dp"
            android:gravity="center_vertical"
            android:text="@string/instruccion_lentes"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:weightSum="5"
        tools:ignore="UselessLeaf">

        <ImageView
            android:id="@+id/instruccion_img_distancia"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="70dp"
            android:layout_weight="4"
            app:srcCompat="@drawable/espacio"
            android:tint="@color/White"
            android:contentDescription="@string/instruccion_img_distancia" />

        <TextView
            android:id="@+id/instruccion_distancia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="14dp"
            android:paddingStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:paddingBottom="14dp"
            android:gravity="center_vertical"
            android:text="@string/instruccion_distancia"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:weightSum="5"
        tools:ignore="UselessLeaf">

        <ImageView
            android:id="@+id/instruccion_img_pestaniear"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="70dp"
            android:layout_weight="4"
            app:srcCompat="@drawable/vision"
            android:tint="@color/White"
            android:contentDescription="@string/instruccion_img_pestaniear" />

        <TextView
            android:id="@+id/instruccion_pestaniear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="14dp"
            android:paddingStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:paddingBottom="14dp"
            android:gravity="center_vertical"
            android:text="@string/instruccion_pestaniear"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">s

        <CheckBox
            android:id="@+id/checkbox_enrollment_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:shadowColor="#FFFFFF"
            android:text="@string/instruccion_chck_disipar"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="?android:attr/windowBackground"
            app:buttonTint="#FFFFFF" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        tools:ignore="UselessLeaf">
        <Button
            android:id="@+id/btn_continue_dialog_enroll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/instruccion_btn_continuar"
            app:backgroundTint="#B74A4949" />
    </LinearLayout>

</LinearLayout>