<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="440dp"
        android:layout_height="wrap_content"

        android:background="#8a8987"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"

                android:text="@string/title_dialog_enrollment"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/NumDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/text1_dialog_enrollment"
                android:textColor="#dddddd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/numeroDniMH"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/text2_dialog_enrollment"
                android:textColor="#dddddd"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:paddingLeft="2dp"
                android:paddingRight="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCorreo"
                    android:layout_width="match_parent"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_text_dialog_enrollment"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#000000"
                    android:textColorLink="#FFFFFF"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAceptar2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"

                    android:backgroundTint="#b4a7d5"
                    android:text="@string/btn2_dialog_enrollment"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"

                    android:backgroundTint="#b4a7d5"
                    android:text="@string/btn1_dialog_enrollment"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

