<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/versionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/version_apk"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/splash_verify"
                android:textColor="#365BA3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_face"
                android:textColor="#666666"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/splash_powered"
                android:textColor="#383c44"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="109dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo_sdsc_50"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:text="@string/titulo_splash"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="169dp"
                android:layout_height="155dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:paddingTop="30dp"
                app:srcCompat="@drawable/icon_finder_scan"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>