<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED323643"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".views.login.LoginActivity">

    <ImageView
        android:id="@+id/imagenLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_login_final" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="11"
        android:background="@color/White"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="35dp"
            android:paddingEnd="35dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuarioBiometriaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_n_documento"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_person_login_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usuarioBiometria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/acj_azul"
                    android:textColorLink="@color/acj_naranja"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contraseniaBiometriaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_login_blanco_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contraseniaBiometria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/acj_azul"
                    android:textColorLink="@color/acj_naranja"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_ingresar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_disabled"
                android:clickable="false"
                android:text="@string/login_btn_ingresar"
                android:textColor="@color/White"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>